--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
 
 
@@ -529,7 +529,7 @@
                 <div class="menu-container">
                     <div class="menu-container-title">
                         <div class="menu-user-name">
-                            Olá @Html.Label(User.Identity.Name.Split('|')[1])
+                            @*Olá @Html.Label(User.Identity.Name.Split('|')[1])*@
                         </div>
                     </div>
 
