--- a/Views/Admin/Usuarios.cshtml
+++ b/Views/Admin/Usuarios.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Usuarios";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
 
 <h2>Usuarios</h2>
