--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                         <li>@Html.ActionLink(User.Identity.Name.Split('|')[1] + " - Sair", "Sair", "Usuarios")</li>
                         <li>
                             <span class="top-bar-profile-picture">
-                                <img src="~/assets/img/Usuarios/mini_user.jpg">
+                                <img src="~/assets/img/Usuarios/mini_@User.Identity.Name.Split('|')[2]">
                             </span>
                         </li>
                     }
