--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -7,506 +7,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,100,900,100italic,300italic,400italic,700italic,900italic|Oswald:300,400,500,700|Roboto:400,500|Montserrat:300,400,500,600|Source+Serif+Pro:400,600|Roboto+Slab|Roboto:300,300i,400,400i,700,700i' rel='stylesheet'>
 
-    @*<style>
-        .picture-container .perfil-preview {
-            animation: none;
-            position: relative;
-            margin: 0;
-            width: 272px;
-            height: auto;
-            box-sizing: border-box;
-        }
-
-        .menu-wrapper {
-            opacity: 0;
-            width: 100%;
-            height: 100vh;
-            position: absolute;
-            top: 75px;
-            left: 0;
-            z-index: 1;
-            transition: 0.2s;
-            pointer-events: none;
-            box-sizing: border-box;
-        }
-
-        .menu-wrapper-content {
-            background: #253A44;
-            padding: 40px 20px;
-        }
-
-        .menu-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            max-width: 1008px;
-            margin: 0 auto;
-        }
-
-            .menu-container .menu-container {
-                padding: 0;
-                padding-left: 100px;
-                flex-wrap: wrap;
-                width: 100%;
-                font-family: Poppins;
-                font-weight: 200;
-            }
-
-        .menu-container-title {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 20px 0 42px;
-            width: 100%;
-        }
-
-        .picture-container {
-            display: flex;
-            justify-content: center;
-            margin: 0 auto;
-            flex-direction: column;
-            font-family: Poppins;
-            align-items: center;
-        }
-
-        .menu-user-name {
-            color: #fff;
-            font-size: 32px;
-            font-weight: 600;
-        }
-
-        .menu-content {
-            width: 100%;
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .menu-content-item {
-            padding: 12px 12px;
-            width: 100%;
-            transition: 0.3s;
-        }
-
-        .menu-content-item-destaque {
-            background-color: #0e7cb1 !important;
-        }
-
-        .menu-content li {
-            width: calc((100% - 48px ) / 4);
-            height: 100px;
-            background: #2A4753 0% 0% no-repeat padding-box;
-            border-radius: 5px;
-            opacity: 1;
-            margin-bottom: 12px;
-            margin-right: 12px;
-            display: flex;
-            line-height: 26px;
-            box-sizing: border-box;
-        }
-
-        .menu-content-item:hover {
-            background-color: #21627D;
-            border-radius: 5px;
-            transform: translateY(-3px);
-        }
-
-        .menu-content-item a {
-            color: #fff;
-            font-size: 17px;
-            font-weight: 200;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-        }
-
-        .link-menu-mvp, .menu-content li a {
-            font-family: Poppins;
-        }
-
-        .menu-container-rodape {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            padding-top: 25px;
-            margin-top: 20px;
-            border-top: 1px solid #395968;
-        }
-
-        .menu-container-rodape-action {
-            display: flex;
-        }
-
-        .topo-link-minha-conta, .topo-link-logout {
-            color: #fff;
-            font-size: 14px;
-            font-weight: 400;
-            text-align: center;
-            padding: 10px 12px;
-            background: #20333B;
-            border-radius: 5px;
-            margin-right: 12px;
-            display: flex;
-            align-items: center;
-            box-sizing: border-box;
-        }
-
-        .menu-container a, .link-menu-mvp, .menu-content li a, header nav.lateral > ul li > a {
-            text-decoration: none;
-        }
-
-        a.topo-link-minha-conta i, a.topo-link-logout i, #indica-btn-menu i {
-            margin-left: 30px;
-        }
-
-        #indica-btn-menu {
-            color: #fff;
-            font-size: 14px;
-            font-weight: 400;
-            text-align: center;
-            padding: 10px 12px;
-            background: #1F4F66;
-            border-radius: 5px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-        }
-
-            #indica-btn-menu i {
-                fill: #fff;
-                height: 15px;
-                width: 15px;
-                margin-right: 5px;
-            }
-
-            #indica-btn-menu:hover, .topo-link-logout:hover, .topo-link-minha-conta:hover {
-                color: #0AC5D4;
-            }
-
-                #indica-btn-menu:hover i, .topo-link-logout:hover i .b, .topo-link-minha-conta:hover i .a {
-                    fill: #0AC5D4;
-                }
-
-
-
-        /*-------------------------------------*/
-        .menu-wrapper {
-            opacity: 1;
-            pointer-events: auto;
-        }
-
-        .picture-container .perfil-preview {
-            animation: none;
-            position: relative;
-            margin: 0;
-            width: 272px;
-            height: auto;
-            box-sizing: border-box;
-        }
-
-            .picture-container .perfil-preview.pro-preview {
-                border: 4px solid #7b7b7b !important;
-            }
-
-            .picture-container .perfil-preview .picture-user-preview {
-                height: 250px;
-            }
-
-
-        @@media only screen and (max-width: 1108px) {
-            .menu-container {
-                padding: 0 40px;
-            }
-
-                .menu-container .menu-container {
-                    padding-left: 60px;
-                }
-        }
-
-        @@media only screen and (max-width: 1099px) {
-
-            .menu-wrapper {
-                top: 75px;
-            }
-
-            .menu-content li {
-                width: calc((100% - 24px)/3);
-            }
-
-                .menu-content li:nth-child(3n + 3) {
-                    margin-right: 0;
-                }
-
-                .menu-content li:nth-child(4n + 4) {
-                    margin-right: 12px;
-                }
-
-                .menu-content li:nth-child(4) {
-                    margin-right: 12px !important;
-                }
-        }
-
-        @@media only screen and (max-width: 850px) {
-            .picture-container {
-                display: none;
-            }
-
-            .menu-container {
-                padding: 0;
-            }
-
-                .menu-container .menu-container {
-                    padding-left: 0;
-                }
-
-            .menu-content li {
-                width: calc((100% - 36px)/4);
-            }
-
-                .menu-content li:nth-child(3n + 3) {
-                    margin-right: 12px;
-                }
-
-                .menu-content li:nth-child(4n + 4) {
-                    margin-right: 0 !important;
-                }
-        }
-
-        @@media only screen and (max-width: 768px) {
-            .menu-content li {
-                width: calc((100% - 24px)/3);
-            }
-
-                .menu-content li:nth-child(3n + 3) {
-                    margin-right: 0;
-                }
-
-                .menu-content li:nth-child(4n + 4) {
-                    margin-right: 12px !important;
-                }
-        }
-
-        @@media only screen and (max-width: 640px) {
-            .menu-wrapper {
-                height: calc(100vh - 75px);
-                border-radius: 0;
-                overflow: scroll;
-            }
-
-            .menu-wrapper-content {
-                padding: 10px 20px 100px;
-            }
-
-            .menu-wrapper-empty {
-                display: none;
-            }
-
-            .menu-container-title {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-                .menu-container-title a {
-                    margin-top: 10px;
-                }
-
-            .menu-content li {
-                width: calc((100% - 12px)/2);
-            }
-
-                .menu-content li:nth-child(3n + 3) {
-                    margin-right: 12px !important;
-                }
-
-                .menu-content li:nth-child(2n + 2) {
-                    margin-right: 0 !important;
-                }
-
-            .menu-container-rodape {
-                flex-direction: column;
-            }
-
-            .menu-container-rodape-action {
-                flex-direction: column;
-            }
-
-            .topo-link-minha-conta, .topo-link-logout, #indica-btn-menu {
-                margin-right: 0;
-                margin-bottom: 10px;
-                justify-content: space-between;
-            }
-        }
-
-        @@media only screen and (max-width: 350px) {
-            .menu-content-item a {
-                font-size: 16px;
-            }
-        }
-        /* FIM MENU DA FOTO */
-
-
-
-
-
-        .perfil-preview {
-            width: 210px;
-            height: 320px;
-            display: flex;
-            flex-direction: column;
-            font-family: Montserrat;
-            border-radius: 7px;
-            z-index: 999;
-            position: absolute;
-            margin: 20px;
-            background-color: #105576;
-            border: 4px solid #1c4561;
-            pointer-events: none;
-            animation: preview-fade-out .0s ease forwards;
-        }
-
-        .name-perfil-preview {
-            padding: 13px 12px;
-            color: #FBFBFB;
-            font-size: 15px;
-            text-align: initial;
-            flex: 0 0 auto;
-        }
-
-        .perfil-preview > * {
-            box-sizing: border-box;
-        }
-
-        .picture-perfil-preview {
-            position: relative;
-        }
-
-        .picture-container .perfil-preview .picture-user-preview {
-            height: 250px;
-        }
-
-        .picture-perfil-preview img.picture-user-preview {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            margin: 0 auto;
-            border-radius: 0;
-        }
-
-        .info-perfil-preview {
-            background: rgba(28, 68, 96, 0.95);
-            height: 55px;
-            padding: 8px 15px;
-            box-sizing: border-box;
-            width: 100%;
-            margin-left: 0;
-            display: flex;
-            margin-top: -4px;
-            align-items: center;
-        }
-
-            .info-perfil-preview p {
-                margin: 0;
-                line-height: 1.6em;
-                font-size: 12px;
-                color: #FBFBFB;
-            }
-
-        p {
-            display: block;
-            margin-top: 1em;
-            margin-bottom: 1em;
-            margin-left: 0px;
-            margin-right: 0px;
-        }
-
-        .numbers-perfil-preview {
-            display: flex;
-            height: 50px;
-        }
-
-        .numbers_preview {
-            flex: 1 1 auto;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            color: #FBFBFB;
-            font-size: 14px;
-            font-weight: 500;
-            width: 33%;
-            padding-top: 3px;
-        }
-
-            .numbers_preview.devup_preview {
-                border: 1px solid rgba(197, 197, 197, 0.3);
-                border-top: none;
-                border-bottom: none;
-            }
-
-        .menu-container-title a {
-            text-decoration: none;
-            color: #fff;
-            font-size: 12px;
-            font-weight: 500;
-            text-align: center;
-            text-transform: uppercase;
-            padding: 10px 20px;
-            background: #0AC5D4;
-            border-radius: 5px;
-            width: 180px;
-        }
-
-        .menu-content ul[name="PagIndexUsuario"] {
-            display: block;
-            list-style-type: disc;
-            margin-top: 1em;
-            margin-bottom: 1em;
-            margin-left: 0px;
-            margin-right: 0px;
-            padding-left: 40px;
-        }
-
-        .menu-content-item:hover {
-            background: #105576;
-            -webkit-filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
-            filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
-        }
-
-        .menu-content ul[name="PagIndexUsuario"] li[name="PagIndexUsuario"] {
-            display: list-item;
-            text-align: match-parent;
-        }
-
-        .menu-container a, .link-menu-mvp, .menu-content li a, header nav.lateral > ul li > a {
-            text-decoration: none;
-        }
-
-        a[name="PagIndexUsuario"]:-webkit-any {
-            color: -webkit-link;
-            cursor: pointer;
-            text-decoration: underline;
-        }
-
-        .topo-link-minha-conta .a {
-            fill: #fff;
-        }
-
-        :not(svg) {
-            transform-origin: 0px 0px;
-        }
-
-        .topo-link-minha-conta .b {
-            fill: none;
-        }
-
-        .menu-container a, .link-menu-mvp, .menu-content li a, header nav.lateral > ul li > a {
-            text-decoration: none;
-        }
-    </style>*@
-
     <div class="container">
 
         <div class="menu-wrapper-content">
@@ -557,17 +57,17 @@
 
                     <ul name="PagIndexUsuario" class="menu-content">
 
-                        <li name="PagIndexUsuario" class="menu-content-item"><a name="PagIndexUsuario" href="#">Continue<br />Estudando</a></li>
-                        <li name="PagIndexUsuario" class="menu-content-item"><a name="PagIndexUsuario" href="~/Usuario_has_curso/MeusCursos">Meus<br />Cursos</a></li>
-                        <li name="PagIndexUsuario" class="menu-content-item"><a name="PagIndexUsuario" href="#">Meus<br />Exercícios</a></li>
-                        <li name="PagIndexUsuario" class="menu-content-item"><a name="PagIndexUsuario" href="~/Usuarios/MeuCertificado">Meus<br />Certificados</a></li>
-                        <li name="PagIndexUsuario" class="menu-content-item"><a name="PagIndexUsuario" href="#">Plano de<br />Estudos</a></li>
-                        <li name="PagIndexUsuario" class="menu-content-item"><a name="PagIndexUsuario" href="#">Simulados</a></li>
+                        <li class="menu-content-item"><a name="PagIndexUsuario" href="#">Continue<br />Estudando</a></li>
+                        <li class="menu-content-item"><a name="PagIndexUsuario" href="~/Usuario_has_curso/MeusCursos">Meus<br />Cursos</a></li>
+                        <li class="menu-content-item"><a name="PagIndexUsuario" href="#">Meus<br />Exercícios</a></li>
+                        <li class="menu-content-item"><a name="PagIndexUsuario" href="">Meus<br />Certificados</a></li>
+                        <li class="menu-content-item"><a name="PagIndexUsuario" href="#">Plano de<br />Estudos</a></li>
+                        <li class="menu-content-item"><a name="PagIndexUsuario" href="#">Simulados</a></li>
 
-                        <li name="PagIndexUsuario" class="menu-content-item"><a name="PagIndexUsuario" href="#">Histórico de <br />testes</a></li>
+                        <li class="menu-content-item"><a name="PagIndexUsuario" href="#">Histórico de <br />testes</a></li>
                         @if (Model.TiposUsuarios == _30Code.Models.Usuario.TipoUsuario.Comum)
                         {
-                            <li name="PagIndexUsuario" class="menu-content-item menu-content-item-destaque">
+                            <li class="menu-content-item menu-content-item-destaque">
                                 <a name="PagIndexUsuario" href="~/Usuarios/SejaPremium" class="menu-user-assine-topo">Seja Premium</a>
                             </li>
                         }
