--- a/Views/Admin/QuestaoAndResposta.cshtml
+++ b/Views/Admin/QuestaoAndResposta.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "QuestaoAndResposta";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
 
 <h2>QuestaoAndResposta</h2>
