--- a/Views/Usuariosadmin/Create.cshtml
+++ b/Views/Usuariosadmin/Create.cshtml
@@ -7,7 +7,8 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Usuariosadmin", FormMethod.Post,
+new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -58,8 +59,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UrlImagem, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UrlImagem, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UrlImagem, "", new { @class = "text-danger" })
+                <input name="arq" class="form-control" type="file" />
             </div>
         </div>
 
