--- a/Views/Views/Usuariosadmin/Delete.cshtml
+++ b/Views/Views/Usuariosadmin/Delete.cshtml
@@ -48,9 +48,11 @@
             @Html.DisplayNameFor(model => model.UrlImagem)
         </dt>
         <dt>
-                        <img src="~/assets/img/Usuarios/@Model.UrlImagem"
-                             style="max-width:70px;" />
-        </dt>
+
+             
+        <img src="~/Uploads/@Model.UrlImagem"
+             style="max-width:70px;" />
+            </dt>
         <dt>
             @Html.DisplayNameFor(model => model.TiposUsuarios)
         </dt>
@@ -77,7 +79,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="DeleteConfirmed" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
