--- a/Views/Views/Usuariosadmin/Details.cshtml
+++ b/Views/Views/Usuariosadmin/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model _30Code.Models.Usuario
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Usuario</h4>
     <hr />
@@ -27,7 +26,8 @@
         <dd>
             @Html.DisplayFor(model => model.Email)
         </dd>
-           
+         
+
         <dt>
             @Html.DisplayNameFor(model => model.Celular)
         </dt>
@@ -47,10 +47,11 @@
         <dt>
             @Html.DisplayNameFor(model => model.UrlImagem)
         </dt>
-        <dt>
-                        <img src="~/assets/img/Usuarios/@Model.UrlImagem"
-                             style="max-width:70px;" />
-        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UrlImagem)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.TiposUsuarios)
         </dt>
@@ -66,19 +67,11 @@
         <dd>
             @Html.DisplayFor(model => model.Sexos)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Hash)
-        </dt>
          
+
     </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="DeleteConfirmed" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
 </div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
