Organização do Admin

--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -76,7 +76,7 @@
 
                         <div class="menu-container-rodape">
                             <div class="menu-container-rodape-action">
-                                <a name="PagIndexUsuario" class="topo-link-minha-conta" href="~/Usuarios/Edit">
+                                <a name="PagIndexUsuario" class="topo-link-minha-conta" href="~/Usuarios/EditarDados">
                                     Editar Cadastro
                                     <i class="icofont-pen-alt-2"></i>
                                 </a>
