--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -4,6 +4,8 @@
     Layout = "~/Views/Shared/_LayoutPageAdmin.cshtml";
 }
 
+<br />
+<br />
 
 <div class="container mt-3 mb-3">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -436,8 +438,8 @@
             align-items: center;
             justify-content: center;
             color: #FBFBFB;
-            font-size: 14px;baianBrasil catJAM 
-            font-weight: 500;
+            font-size: 14px;
+            baianBrasil catJAM font-weight: 500;
             width: 33%;
             padding-top: 3px;
         }
@@ -534,14 +536,12 @@
                     </div>
 
                     <ul class="menu-content">
-
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Conteudoes/Index" class="menu-user-assine-topo">Criar Conteudo</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Cursoadmin/Index" class="menu-user-assine-topo">Criar Curso</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Anexoes/Index" class="menu-user-assine-topo">Criar Anexo</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Usuariosadmin/Index" class="menu-user-assine-topo">Todos Usuarios</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Questoes/Index" class="menu-user-assine-topo">Criar Questão e Resposta </a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Moduloes/Index" class="menu-user-assine-topo">Criar Modulos </a></li>
-
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/ConteudoIndex" class="menu-user-assine-topo">Criar Conteudo</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/CursoIndex" class="menu-user-assine-topo">Criar Curso</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/AnexoIndex" class="menu-user-assine-topo">Adicionar anexos</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/UsuarioIndex" class="menu-user-assine-topo">Listar Usuarios</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/QuestaoIndex" class="menu-user-assine-topo">Adicionar questões e respostas </a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/ModuloIndex" class="menu-user-assine-topo">Criar Modulos </a></li>
                     </ul>
 
                     <div class="menu-container-rodape">
