--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li>@Html.ActionLink("Cadastrar", "Create", "Usuarios")</li>
+                        <li>@Html.ActionLink("Cadastrar", "Cadastrar", "Usuarios")</li>
                     }
                     else
                     {
@@ -217,23 +217,27 @@
     @if (TempData["MSG"] != null)
     {
         <script>
-            $(document).ready(function () {
-            var titulo = "";
-            switch ("@TempData["MSG"].ToString().Split('|')[0]") {
-            case "success":
-            titulo = "Sucesso";
-            break;
-            case "warning":
-            titulo = "Atenção";
-            break;
-            case "error":
-            titulo = "Erro";
-            break;
-            case "info":
-            titulo = "Informação";
-                        break;
-                }swal(titulo, "@Html.Raw(TempData["MSG"].ToString().Split('|')[1])", "@TempData["MSG"].ToString().Split('|')[0]");
-            });
+            $(document).ready(
+                function ()
+                {
+                    var titulo = "";
+                    switch ("@TempData["MSG"].ToString().Split('|')[0]")
+                    {
+                        case "success":
+                            titulo = "Sucesso";
+                            break;
+                        case "warning":
+                            titulo = "Atenção";
+                            break;
+                        case "error":
+                            titulo = "Erro";
+                            break;
+                        case "info":
+                            titulo = "Informação";
+                            break;
+                    }
+                    swal(titulo, "@Html.Raw(TempData["MSG"].ToString().Split('|')[1])", "@TempData["MSG"].ToString().Split('|')[0]");
+                });
         </script>
     }
     @RenderSection("scripts", required: false)
