--- a/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Views/Shared/_LayoutPageAdmin.cshtml
@@ -9,42 +9,61 @@
 </head>
 <body>
     <div>
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            @Html.ActionLink("30Code", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="~/Admin/Edit">
-                            Edit
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/Admin/Index">Index</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="~/Admin/QuestaoAndResposta">QuestaoResposta</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                           aria-haspopup="true" aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="~/Admin/Usuarios">Usuarios</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                </ul>
+        <div class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+            <div class="container">
+                @Html.ActionLink("Nome do aplicativo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse">
+                    <ul class="navbar-nav" style=" margin-top: auto">
+                        <li class="nav-item">@Html.ActionLink("Início", "Index", "Home", new { @class = "nav-link" })</li>
+                        <li class="nav-item">@Html.ActionLink("Sobre", "About", "Home", new { @class = "nav-link" })</li>
+                        <li class="nav-item">@Html.ActionLink("Contato", "Contact", "Home", new { @class = "nav-link" })</li>
+                        <li class="nav-item">@Html.ActionLink("Cadastrar", "Create", "Cadastrars", new { @class = "nav-link" })</li>
+                    </ul>
+                </div>
             </div>
-        </nav>
+        </div>
+        <br />
+        <br />
+        <br />
 
-        <div class="container body-content">
+        @*<nav class="navbar navbar-expand-lg navbar-light bg-light">
+                @Html.ActionLink("30Code", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="~/Admin/Edit">
+                                Edit
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/Admin/Index">Index</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="~/Admin/QuestaoAndResposta">QuestaoResposta</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                               aria-haspopup="true" aria-expanded="false">
+                                Dropdown link
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="~/Admin/Usuarios">Usuarios</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>*@
+
+        <div class="">
             @RenderBody()
             <hr />
             <footer>
@@ -52,5 +71,6 @@
             </footer>
         </div>
     </div>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
