--- a/Views/Admin/UsuarioCreate.cshtml
+++ b/Views/Admin/UsuarioCreate.cshtml
@@ -8,7 +8,8 @@
 <div class="container">
     <h2>UsuCreate</h2>
 
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Create", "Usuariosadmin", FormMethod.Post,
+new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
@@ -57,13 +58,8 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.UrlImagem, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.UrlImagem, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.UrlImagem, "", new { @class = "text-danger" })
-                </div>
+                <input name="arq" class="form-control" type="file" />
             </div>
-
             <div class="form-group">
                 @Html.LabelFor(model => model.TiposUsuarios, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
