--- a/Views/Admin/UsuarioIndex.cshtml
+++ b/Views/Admin/UsuarioIndex.cshtml
@@ -53,7 +53,8 @@
                     @Html.DisplayFor(modelItem => item.Nascimento)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.UrlImagem)
+                    <img src="~/assets/img/Usuarios/@item.UrlImagem"
+                         style="max-width:70px;" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.TiposUsuarios)
